crates/uitest/fixtures/ty_check/derive_generic_struct.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/derive_generic_struct.fe
---
error[17-0002]: `#[derive(Eq)]` structs must be non-generic
  ┌─ derive_generic_struct.fe:2:15
  │
2 │ struct Generic<T> {
  │               ^^^ generics are not supported on derived structs
  │
  = remove generic parameters from the struct
